[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "interplanet-time"
version = "0.1.0"
description = "Interplanetary time, calendar, orbital mechanics, and meeting scheduler for every planet"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = []  # stdlib only

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/interplanet_time"]

[tool.pytest.ini_options]
testpaths = ["tests"]
